# aftafa

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.dev.txt
aftafa/: __init__.py  __main__.py
aftafa/cli/: __init__.py  cli.py
aftafa/client/: __init__.py  baseclient.py
aftafa/client/diadoc/: client.py  conf.py  crud.py  db.py  model.py  resource.py
aftafa/client/ec/: __init__.py  models.py  schemas.py
aftafa/client/gsheets/: db.py
aftafa/client/mail/: __init__.py  client.py  imap_client.py  parser.py  smtp_client.py
aftafa/client/megamarket/: client.py  crud.py  models.py  routes.py
aftafa/client/moysklad/: constructor.py  crud.py  mappings.json  models.py  routes.py  schemas.py
aftafa/client/mpstats/: client.py
aftafa/client/mvideo/: check.py  client.py  controllers.py  crud.py  filehandler.py  models.py  routes.py  schemas.py
aftafa/client/odata/: client.py  resource.py
aftafa/client/ozon/: __initmodel.py  __newmodels.py  __newroutes.py  client.py  crud.py  db.py  handlers.py  (+5 more)
aftafa/common/: cli.py  config.py  dal.py  destination.py  loader.py  logger.py  pipeline.py  resource.py  source.py
aftafa/sql/: base.sql
aftafa/utils/: __init__.py  helpers.py  schema_resolver.py
docs/: config.md  overview.md
examples/: example.py
examples/email-attachment-to-file/: example.py  mail_config.json
examples/email-to-rawfile/: example.py  mail_config.json  pipeline.yaml
examples/rest-api-to-rawfile/: pipeline.yaml
test/common/: test_loader.py  test_pipeline.py  test_resource.py
test/utils/: test_helpers.py
(+43 files in other folders)
